2010-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (OpenBlob): Only form multi-part filename when
	required.

	* magick/display.c (MagickXDisplayImage): The display '-update'
	option was only working in conjunction with the '-delay' option
	with a delay setting of 2 or greater.  Problem reported by Sami
	Liedes.  Patch by Vincent MAUGE.  Resolves Debian bug ID 414779.

2010-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (OpenBlob): Only apply scene substitution to
	the filename if adjoin is false.

	* magick/constitute.c (WriteImage): If adjoin is true, then
	restore original filename specification since opening the blob
	modifies it.  Resolves Debian bug ID 552998.

	* magick/image.c (SetImageInfo): Don't check filename for scene
	substitution if adjoin is intentionally false.  This allows saving
	to file names which look like they contain a scene substitution
	pattern.

	* magick/command.c (MogrifyImage): Convolution failure results in
	a crash rather than an error report.  Resolves Debian bug ID
	539251.

2010-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/deprecate.c: The string constants LoadImageText,
	SaveImageText, LoadImagesText, and SaveImagesText should have been
	deprecated, rather than being entirely removed.

2010-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Makefile.am (install-data-html): Make sure that only the
	necessary documentation files are installed.

2010-01-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/transform.c (FlattenImages): Apply the image background
	color under the initial canvas image if it is non-opaque.

	* magick/composite.c (MagickCompositeImageUnderColor): New private
	function to apply a color underneath a non-opaque image.

2010-01-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (BlurImageScanlines): Solid color images which
	only differed in the matte channel were not being blurred.
