@@ -24,6 +24,10 @@
 2010-02-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/color_lookup.c (QueryColorname): XPM does not support
+        RGBA color syntax, but it does support RGB.  Patch by Daniel
+        Kobras.
+
   <LI> magick/blob.c (OpenBlob): Only form multi-part filename when
         required.
 
