@@ -1,5 +1,9 @@
 2010-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/color_lookup.c (QueryColorname): XPM does not support
+	RGBA color syntax, but it does support RGB.  Patch by Daniel
+	Kobras.
+
 	* magick/blob.c (OpenBlob): Only form multi-part filename when
 	required.
 
